tests/ui/inline-const/expr-in-item-context.stderr
error: expected item, found keyword `const`
  --> $DIR/expr-in-item-context.rs:9:1
   |
LL | const { assert!(size_of::<u32>() <= size_of::<usize>()) };
   | ^^^^^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

